--- a/style.css
+++ b/style.css
@@ -96,3 +96,32 @@ header nav ul{
     width:100%;
     background-color: #e5e7eb;
 }
+
+.action-maindiv{
+    background-color: #3882f6;
+    height:100px;
+    width:400px;
+    margin-left: 500px;
+}
+
+.action-seconddiv{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.action-seconddiv button{
+    background-color: #3882f6;
+    font-weight: 500;
+    color: white;
+    border-radius: 10px;
+    border:2px solid white;
+    padding: 5px 30px;
+}
+
+footer{
+    background-color: #1f2937;
+    color: white;
+    text-align: center;
+    height: 50px;
+}
